immich/immich-resor/immich-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich-resor
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: resor
