immich/immich-resor/immich-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: immich-resor
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: resor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/instance: resor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich
        app.kubernetes.io/instance: resor
    spec:
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:v3.3.1
          ports:
            - containerPort: 2283
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich
