immich/immich-resor/immich-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich-resor
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: resor
spec:
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: resor
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
